fixed broken css

--- a/src/components/pages/PostStyle.css
+++ b/src/components/pages/PostStyle.css
@@ -24,6 +24,6 @@ nav {
       overflow: hidden;
   }
 
-  #listBtn {
-      margin-left: 23%;
-  }
+ #list {
+     margin-top: 0%;
+ }
